# langchain-openai-crash-course

./: .gitignore  pyproject.toml  requirements.txt
1_chat_models/: 1_chat_model_basic.py  2_chat_model_basic_coversation copy.py  3_chat_model_alternatives.py  4_chat_model_conversation_with_user.py  5_chat_model_save_histoy.py
2_prompt_template/: 1_prompt_template_basic.py  2_prompt_template_with_chat_model.py
3_chains/: 1_chain_basics.py  2_chains_under_the_hood.py  3_chain_extended.py  4_chains_parrarel.py  5_chains_branching.py
4_rag/: 1a_rags_basic.py
